[package]
name = "itsuku"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
blake2 = "0.10.6"
bytemuck = "1.24.0"
bytes = { version = "1.11.0", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
hex-literal = "1.1.0"
num_cpus = "1.17.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.16.1", features = ["base64"] }
